# Data-Quay-Format

./: .gitignore  Cargo.toml  README.md  Spec.md
crates/cove-arrow/: Cargo.toml
crates/cove-arrow/src/: arrow.rs  lib.rs  parquet.rs
crates/cove-conformance/: Cargo.toml
crates/cove-conformance/src/: main.rs  manifest.rs  runner.rs
crates/cove-convert-parquet/: Cargo.toml
crates/cove-convert-parquet/src/: main.rs
crates/cove-convert-parquet/tests/: cli.rs
crates/qf-core/: Cargo.toml
crates/qf-core/examples/: write_validate_inspect.rs
crates/qf-core/src/: array.rs  canonical.rs  checksum.rs  collation.rs  compression.rs  constants.rs  dictionary.rs  digest.rs  domain.rs  durable.rs  error.rs  extensions.rs  footer.rs  header.rs  io_hints.rs  kernel.rs  lib.rs  metadata.rs  page.rs  postscript.rs  predicate.rs  pruning.rs  reader.rs  redaction.rs  registry.rs  row_ref.rs  segment.rs  sort.rs  table.rs  trust_chain.rs  types.rs  validity.rs  wire.rs  writer.rs  zone_stats.rs
crates/qf-core/tests/: robustness.rs
v2/: Cargo.toml  spec.md
v2/conformance/: README.md  capability_matrix.md  manifest.jsonl
v2/conformance/accept/: arrow_bitmap_arrow_to_cove_partial_valid.json  arrow_bitmap_cove_to_arrow_valid.json  arrow_export_utf8_valid.json  cove_e_lz4_valid.cove  cove_e_optional_bad_descriptor.cove  cove_e_optional_bad_refs.cove  cove_e_profile_bundle_valid.cove  cove_e_zstd_valid.cove  cove_h_mount_rebuild_reuse.cove  cove_h_optional_bad_hints.cove  cove_map_association_only.covemap  cove_map_candidate_identity.covemap  cove_map_candidate_identity_case.json  cove_map_composite_row_semantics.covemap  cove_map_execution.covemap  cove_map_mixed_governance_reject.covemap  cove_map_project_case.json  cove_map_property_conflict.covemap  cove_map_source_priority.covemap  cove_map_tombstone_row_semantics.covemap  cove_map_tombstone_row_semantics_case.json  cove_map_valid.cove  cove_o_optional_bad_catalog.cove  cove_o_temporal_valid.cove  cove_o_trust_manifest_valid.cove  cove_t_bool_numcode_declared.cove  cove_t_local_codebook_lz4.cove  cove_t_nested_list_valid.cove  cove_t_nested_map_valid.cove  cove_t_nested_struct_valid.cove  cove_t_payload_elision_stats_only_all_non_null_valid.cove  cove_t_payload_elision_stats_only_all_null_valid.cove  cove_t_payload_elision_value_stream_mixed_constant.cove  cove_t_registered_stable_codec_valid.cove  cove_t_registered_unsupported_with_fallback.cove  cove_t_scan_table.cove  cove_t_zone_stats_valid.cove  cove_unknown_optional_feature.cove  covemap_valid.covemap  covm_valid.covm  (+32 more)
v2/conformance/coverage/: coverage_proof_record_bad_set_checksum.json  coverage_proof_record_stale_snapshot_reject.json  coverage_proof_record_valid_case.json
v2/conformance/covi/: approximate_index_only_exact_reject.json  bad_digest_reject.json  bad_magic.covi  byte_range_out_of_bounds_reject.json  cik2_bad_key_data_checksum.json  duplicate_key_without_chain_reject.json  index_only_count_valid.json  missing_block_ref_reject.json  posting_representations_valid.json  row_ordinal_high_bits_reject.json  row_ordinal_sets_valid.json  row_range_not_coalesced_reject.json  single_section_bad_section_crc.covi  single_section_valid.covi  stale_digest_ignored.json  stale_schema_ignored.json  stale_semantic_map_ignored.json  stale_visibility_ignored.json  unsorted_entries_reject.json  validation_row_range_lookup_valid.json  wrong_block_root_reject.json
v2/conformance/feature-scope/: operation_scoped_unknown_coverage_reject.cove  optional_layout_ignored.cove  page_scoped_unknown_needed_reject.cove  section_scoped_unknown_needed_reject.cove
v2/conformance/reject/: arrow_bitmap_arrow_short.json  arrow_export_json_requires_report.json  cove_e_required_bad_descriptor.cove  cove_e_required_bad_refs.cove  cove_h_required_bad_hints.cove  cove_lz4_missing_feature.cove  cove_map_evidence_invalid.cove  cove_map_function_undeclared.cove  cove_map_identity_conflict.cove  cove_map_invalid.cove  cove_map_invalid_row_semantics.covemap  cove_map_mixed_governance_case.json  cove_map_projection_missing_policy.covemap  cove_map_property_conflict_case.json  cove_map_source_stale.cove  cove_o_property_elision_missing_feature.cove  cove_o_property_stats_only_all_non_null_missing_stats.cove  cove_o_required_bad_catalog.cove  cove_o_temporal_bad_order.cove  cove_o_temporal_bad_prev_ref.cove  cove_o_temporal_csn_decreases.cove  cove_o_trust_manifest_bad_digest.cove  cove_t_bad_column_domain.cove  cove_t_bad_segment_gap.cove  cove_t_bad_zone_stats.cove  cove_t_bool_numcode_missing_declaration.cove  cove_t_duplicate_table_id.cove  cove_t_nested_list_bad_child_count.cove  cove_t_nested_map_duplicate_keys.cove  cove_t_nested_mismatched_schema.cove  cove_t_nested_missing_schema.cove  cove_t_nested_struct_missing_null_handling.cove  cove_t_numcode_page_short_values.cove  cove_t_payload_elision_missing_feature.cove  cove_t_payload_elision_value_stream_missing_bitmap.cove  cove_t_payload_elision_value_stream_missing_feature.cove  cove_t_payload_elision_value_stream_wrong_root.cove  cove_t_registered_fallback_mismatch.cove  cove_t_registered_malformed_envelope.cove  cove_t_registered_required_without_fallback.cove  (+26 more)
v2/conformance/runtime/: runtime_operation_required_matching.json
v2/conformance/sidecars/: covi_digest_mismatch.json  covi_schema_mismatch.json  covi_semantic_map_mismatch.json  covi_sidecar_valid.covi
v2/conformance/visibility/: overlay_aware_exact_answers.json  overlay_disables_exact_answers.json
v2/conformance/zerocopy/: arrow_view_selected_materializes_compact.json  compat_arrow_view.json  materialize_compressed.json  materialize_dictionary.json  materialize_lifetime.json  materialize_nested.json  materialize_null_polarity.json  materialize_unknown_role.json  materialize_visibility_overlay.json  optional_zero_copy_map_ignored.cove
v2/crates/cove-bench/: Cargo.toml
v2/crates/cove-cache/: Cargo.toml
v2/crates/cove-codec/: Cargo.toml
v2/crates/cove-conformance/: Cargo.toml
v2/docs/: covemap-json-schema-v1.md
v2/scripts/: check-v2-boundaries.sh  release-gates.sh
(+678 files in other folders)
