[workspace]
members = [
    "crates/cove-core",
    "crates/cove-reader",
    "crates/cove-writer",
    "crates/cove-convert",
    "crates/cove-engine",
    "crates/cove-io",
    "crates/cove-harbor",
    "crates/cove-arrow",
    "crates/cove-datafusion",
    "crates/cove-validate",
    "crates/cove-inspect",
    "crates/cove-dump",
    "crates/cove-convert-parquet",
    "crates/cove-map",
    "crates/cove-conformance",
    "crates/cove-bench",
    "crates/cove-codec",
    "crates/cove-layout",
    "crates/cove-runtime",
    "crates/cove-coverage",
    "crates/cove-index",
    "crates/cove-cache",
    "crates/cove-fuzz",
    "vendor/orc-rust",
]
resolver = "2"

[patch.crates-io]
orc-rust = { path = "vendor/orc-rust" }
