[package]
name = "cove-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
cove-arrow = { path = "../cove-arrow" }
cove-core = { path = "../cove-core" }
cove-map = { path = "../cove-map" }
serde_json = "1"
arrow-array = "58"
parquet = { version = "58", default-features = false, features = ["arrow"] }
