[package]
name = "cove-convert-parquet"
version = "0.1.0"
edition = "2021"
description = "Reference Parquet-to-COVE conversion CLI"
license = "MIT"

[dependencies]
cove-core = { path = "../cove-core" }
serde_json = "1"

[dev-dependencies]
arrow-array = "54"
parquet = { version = "54", default-features = false, features = ["arrow"] }