[package]
name = "cove-convert-parquet"
version = "0.1.0"
edition = "2021"
description = "Reference Parquet-to-COVE conversion CLI"
license = "MIT"

[dependencies]
cove-arrow = { path = "../cove-arrow" }
cove-core = { path = "../cove-core" }
serde_json = "1"

[dev-dependencies]
arrow-array = "58"
parquet = { version = "58", default-features = false, features = ["arrow"] }