[package]
name = "qf-core"
version = "0.1.0"
edition = "2021"
description = "Core primitives for the Quay Format (QF) v1.0"
license = "MIT"

[features]
# The default build enables every showcase capability so the reference
# implementation exercises real codecs and digests, matching Spec §65 and §66.
default = ["compression-lz4", "compression-zstd", "digest-sha2", "digest-blake3"]
compression-lz4 = ["dep:lz4_flex"]
compression-zstd = ["dep:ruzstd"]
digest-sha2 = ["dep:sha2"]
digest-blake3 = ["dep:blake3"]

[dependencies]
crc32c = "0.6"
serde_json = "1"
lz4_flex = { version = "0.11", default-features = false, features = ["std"], optional = true }
ruzstd = { version = "0.7", optional = true }
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]
