[package]
name = "cove-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
cove-arrow = { path = "../cove-arrow" }
cove-cache = { path = "../cove-cache" }
cove-coverage = { path = "../cove-coverage" }
cove-core = { path = "../cove-core" }
cove-datafusion = { path = "../cove-datafusion", features = ["covm", "covx", "covi", "parquet-compare"] }
cove-index = { path = "../cove-index" }
cove-map = { path = "../cove-map" }
arrow-array = "58"
arrow-schema = "58"
orc-rust = "0.8"
parquet = { version = "58", default-features = false, features = ["arrow"] }
serde_json = "1"
