[package]
name = "cove-core"
version = "0.1.0"
edition = "2021"
description = "Core primitives for the Cove Format (COVE) v2.0"
license = "MIT"

[features]
# The default build enables every showcase capability so the reference
# implementation exercises real codecs and digests, matching Spec §65 and §66.
default = ["compression-lz4", "compression-zstd", "digest-sha2", "digest-blake3"]
compression-lz4 = ["dep:lz4_flex"]
compression-zstd = ["dep:ruzstd", "dep:zstd"]
digest-sha2 = ["dep:sha2"]
digest-blake3 = ["dep:blake3"]

[dependencies]
crc32c = "0.6"
serde = "1"
serde_json = "1"
bytes = "1"
lz4_flex = { version = "0.13", default-features = false, features = ["std"], optional = true }
ruzstd = { version = "0.7", optional = true }
zstd = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]

[[bin]]
name = "cove-build-covm"
path = "src/bin/cove-build-covm.rs"

[[bin]]
name = "cove-build-covx"
path = "src/bin/cove-build-covx.rs"

[[bin]]
name = "cove-verify-digest"
path = "src/bin/cove-verify-digest.rs"

[[bin]]
name = "cove-canonicalise"
path = "src/bin/cove-canonicalise.rs"

[[bin]]
name = "cove-profile"
path = "src/bin/cove-profile.rs"
