[package]
name = "cove-dump"
version = "0.1.0"
edition = "2021"
description = "CLI dumper for Cove Format (COVE) v2.0 files"
license = "MIT"

[[bin]]
name = "cove-dump"
path = "src/main.rs"

[dependencies]
cove-datafusion = { path = "../cove-datafusion" }
cove-core = { path = "../cove-core" }
arrow-json = "58"
